--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/css/master.css">
     <title>Testing Homepage</title>
+    <link rel="stylesheet" type="text/css" href="css/master.css">
   </head>
   <body>
     <h1>Testing</h1>
