--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>Testing Homepage</title>
-    <link rel="stylesheet" type="text/css" href="css/master.css">
+    <title> Branching Practice Site </title>
   </head>
   <body>
-    <h1>Testing</h1>
-
+    <h1> Branching </h1>
+    <h2> A website to practice branching with Git. </h2>
+    <p> This page has been created in order to practice branching with Git and GitHub. By creating branches, we can work on different versions of the same code in the same repository simultaneously!  </p>
   </body>
 </html>
